# backtest-engine

./: .gitignore  Cargo.toml  README.md  config.txt  helpers.lua  indicator_plugin_test.lua  strategy_plugin_test.lua
plugins/indicators/: rsi.lua
plugins/strategies/: example_strategy.lua
plugins/strategies/example/: settings.txt  strategy.lua
plugins/strategies/rsi-test/: settings.txt
scripts/strategies/example/: settings.txt  strategy.lua
scripts/strategies/rsi-test/: strategy.lua
src/: commands.rs  main.rs  main_data_conversion.rs  main_data_ingestion.rs  main_database.rs  main_datasets_csv.rs  main_filesystem.rs  main_gui.rs  main_lua.rs  main_query.rs  main_working.rs  models.rs  system.rs  threads.rs  utils.rs
src/database/: cache.rs  database.rs  engine.rs  mod.rs  storage.rs  threads.rs
src/database/models/: bar.rs  bar_map.rs  barset.rs  candlestick.rs  chunk.rs  exchange.rs  field.rs  header.rs  index.rs  mod.rs  query.rs  query_builder.rs  query_result.rs  symbol.rs
src/database/storage/: mod.rs  reader.rs
src/database/tasks/: mod.rs  perform_query.rs  query.rs  read_chunk.rs
src/datasets/: data_provider.rs  dataset.rs  mod.rs
src/datasets/providers/: crypto_compare.rs  google_finance.rs  (+3 more)
src/filesystem/: filesystem.rs  mod.rs  reader.rs  writer.rs
src/old/: latest_old_main.rs  lua_stuff.rs  main_old.rs  old.rs  test_lua.rs
src/plugins/: datasets.rs  indicators.rs  lua_hooks.rs  lua_old.rs  mod.rs  script.rs  strategies.rs
src/utils/: config.rs  mod.rs  rest.rs
strategies/: example_strategy.lua
strategies/example/: strategy.lua
(+41 files in other folders)
