[package]
name = "st-backtester-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.23"
csv = "1.2.0"
rlua = "0.19.4"
rustyline = "10.1.1"

[profile.release]
opt-level = 3
debug = true
lto = "fat"
