[package]
name = "st-backtester-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.23"
crossbeam = "0.8.2"
csv = "1.2.0"
evmap = "10.0.2"
flamegraph = "0.6.2"
# glib = "0.17.2"
# gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
# rlua = "0.19.4"
# rustyline = "10.1.1"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
uuid = { version = "1.3.0", features = ["v4"] }

[profile.release]
opt-level = 3
debug = true
lto = "fat"
